
  * debian/rules:
    - install appstream stuff into /usr/share/metainfo. sigh.
    - make -writer-dbgsym recommend -core-dbgsym as it wants some gdb stuff
      from it
    - set UNO_LIBS_DBG_ROOT to fix gdb helper installation for uno-libs3 again
      and make -core-dbgsym recommends uno-libs3-dbgsym (same reason as above)
    - generate and install apparmor profiles

 -- Rene Engelhard <rene@debian.org>  Sat, 05 Aug 2017 14:15:19 +0000

libreoffice (1:5.4.0-1) unstable; urgency=medium

  * New upstream release

  * upload to unstable

  * debian/patches/examples-fix-SDK_AUTO_DEPLOYMENT-check.diff: don't try
    to do "auto deployment" when SDK_AUTO_DEPLOYMENT = NO...
  * debian/patches/libebook-1.2.so.19.diff: backport from master; adds
    libebook-1.2.so.19 (e-d-s 3.24+) to EApi.cxx

  * debian/rules:
    - strip librhino-java from java:Depends, we use the internal one still..
    - add pstoedit, imagemagick and ghostscript as (test) Build-Depends:
  * debian/control.in:
    - add ghostscript to the "EPS Suggests"
  * debian/rules. debian/control.in:
    - add libsane-suggests substvar to prepare for libsane1

  * merge from Ubuntu, thanks Rico Tzschichholz
    - don't recommend libreoffice-sdbc-firebird if firebird is disabled

  [ Rico Tzschichholz ]
  - fix get_libebook_dep.sh for libebook1.2-dev (>= 3.24)

 -- Rene Engelhard <rene@debian.org>  Tue, 25 Jul 2017 22:30:57 +0200

libreoffice (1:5.4.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/patches/mediawiki-oor-replace.diff: back to ="fuse" for Paths.xcu
    as otherwise it overwrites Template paths and breaks the python wizards
    (closes: #867209)

  * debian/tests/control, debian/uitest: improve, we can only run the test
    now; remove build-needed
  * debian/tests/control, debian/tests/sdk-examples: move ...
  * debian/tests/control, debian/tests/odk-build-examples: ... here and use
    upstreams odk/build-examples check directly.