@@ -194,7 +194,7 @@ Build-Conflicts: amd-libopencl1,
                  nvidia-glx-legacy-dev,
                  nvidia-libopencl1,
                  qt3-dev-tools
-Standards-Version: 4.0.0
+Standards-Version: 4.0.1
 Vcs-Git: https://anonscm.debian.org/git/pkg-openoffice/libreoffice.git
 Vcs-Browser: https://anonscm.debian.org/git/pkg-openoffice/libreoffice.git
 Bugs: mailto:debian-openoffice@lists.debian.org
@@ -4414,7 +4414,7 @@ Description: office productivity suite -- Evolution addressbook support
 
 Package: libreoffice-subsequentcheckbase
 Section: libs
-Priority: extra
+Priority: optional
 Architecture: all
 Depends: ${java:Depends}, ${misc:Depends}
 Description: LibreOffice java test libraries
@@ -4457,7 +4457,7 @@ Description: Firebird SDBC driver for LibreOffice
 
 Package: libreoffice-pdfimport
 Section: oldlibs
-Priority: extra
+Priority: optional
 Architecture: all
 Depends: libreoffice-common (>= 1:5.4~),
          libreoffice-core (>= 1:5.4~),
