@@ -22,7 +22,7 @@ Build-Conflicts: flex (= 2.5.34-1) [amd64],
                  qt3-dev-tools,
                  amd-libopencl1,
                  nvidia-libopencl1
-Standards-Version: 4.0.0
+Standards-Version: 4.0.1
 Vcs-Git: https://anonscm.debian.org/git/pkg-openoffice/libreoffice.git
 Vcs-Browser: https://anonscm.debian.org/git/pkg-openoffice/libreoffice.git
 Bugs: @BUGS@
