@@ -1,6 +1,6 @@
 Package: libreoffice-subsequentcheckbase
 Section: libs
-Priority: extra
+Priority: optional
 Architecture: all
 Depends: ${java:Depends}, ${misc:Depends}
 Description: LibreOffice java test libraries
