@@ -1,6 +1,6 @@
 Package: libreoffice-pdfimport
 Section: oldlibs
-Priority: extra
+Priority: optional
 Architecture: all
 Depends: libreoffice-core (>= 1:5.4~), libreoffice-common (>= 1:5.4~), ${misc:Depends}
 Description: transitional package for PDF Import component for LibreOffice
