@@ -7,6 +7,8 @@ libreoffice (1:5.4.0-2) UNRELEASED; urgency=medium
     - set UNO_LIBS_DBG_ROOT to fix gdb helper installation for uno-libs3 again
       and make -core-dbgsym recommends uno-libs3-dbgsym (same reason as above)
     - generate and install apparmor profiles
+  * debian/control*in:
+    - move to policy 4.0.1; extra -> optional
 
  -- Rene Engelhard <rene@debian.org>  Sat, 05 Aug 2017 14:15:19 +0000
 
